
Thu Feb 13 18:40:52 CET 2003 Paolo Molaro <lupus@ximian.com>

	* ModuleBuilder.cs: add the basic initialization call.

2003-02-13  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyBuilder.cs: Added basic error checking to some methods
	according to the MSDN docs.

2003-02-10  Zoltan Varga  <vargaz@freemail.hu>

	* ConstructorBuilder.cs: 
	- Added basic error checking to all methods according to the MSDN docs.
	- modified a lot of methods to throw NotSupportedException, to comply
	  with MS.NET.

2003-02-09  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilder.cs:
	- Added basic error checking to all methods according to the MSDN docs.
	- fixed AssemblyQualifiedName.
	- implemented 'Size'.
	- modified a lot of methods to throw NotSupportedException, to comply
	  with MS.NET.
	- changes tested by running a full bootstrap.

2003-02-09  Martin Baulig  <martin@ximian.com>

	* AssemblyBuilder.cs (AssemblyBuilder.methods): Removed.  This was
	a hack for the symbol writer which is no longer needed.

2003-02-09  Martin Baulig  <martin@ximian.com>

	* IMonoSymbolWriter.cs (DefineNamespace, OpenMethod): New methods.

2003-02-09  Martin Baulig  <martin@ximian.com>

	* IMonoSymbolWriter.cs (MarkSequencePoint): New method which takes
	just the required arguments as scalars, not arrays.

	* ILGenerator.cs (ILGenerator.MarkSequencePoint): Use that new
	interface method; unnecessarily creating such a large number of
	arrays is both slow and too memory consuming.	

2003-02-08  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBuilder.cs: Added error checking to methods so they conform to
	MSDN docs. Implemented 'GetModule' and 'CallingConvention' members. 
	Some other tweaks to improve compatibility with MS .NET.

	* TypeBuilder.cs: Added 'is_created' property which will be used for
	checking 'type is already created' errors.

2003-02-07  Martin Baulig  <martin@ximian.com>

	* ModuleBuilder.cs (.ctor): Added `bool IsMainModule' argument.